tests/uat/errors/syntax_error.rq
rq broken_request("http://localhost:8080/test", [
    "X-Broken": "yes"
);
